# parsing

./: Makefile  README.md  pyproject.toml  search_settings.py
parse/: navig_parse.py
parse/scripts/: parse_2gis.py
parse/two_gis/: main.py  paths.py
