[tool.poetry]
name = "parse"
version = "0.1.0"
description = ""
authors = ["Spike2250 <shilov.spike2250@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.1"
selenium = "^4.18.1"
openpyxl = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
parse-2gis = "parse.scripts.parse_2gis:main"
